envoy-gateway/demo-ext-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: exteg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
