envoy-gateway/demo-gateway-ext.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: exteg
spec:
  gatewayClassName: exteg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
