envoy-gateway/demo-gateway-ext1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argo-cd-eg
  namespace: argocd
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
