envoy-gateway/goapp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: goappv1-service
  labels:
    app: goappv1
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
  selector:
    app: goappv1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp-v1
spec:
  selector:
    matchLabels:
      app: goappv1
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: goappv1
        version: v1
    spec:
      containers:
        - name: goappv1
          image: ghcr.io/dkr290/devops-projects/goappv1:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-httproute
spec:
  parentRefs:
    - name: eg
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: goappv1-service
          port: 8080
          weight: 1
