envoy-gateway/http-arhoworkflow.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-httproute
  namespace: argo
spec:
  parentRefs:
    - name: eg
      namespace: argo
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-server
          port: 2746
          weight: 1
